# outcome

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/core/: types.hpp
include/outcome/: outcome.hpp
src/: main.cpp
